syntax = "proto3";
package duality.incentives;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "duality/incentives/gauge.proto";
import "duality/incentives/lock.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/duality-labs/duality/x/incentives/types";

service Msg {
  rpc CreateGauge(MsgCreateGauge) returns (MsgCreateGaugeResponse);
  rpc AddToGauge(MsgAddToGauge) returns (MsgAddToGaugeResponse);
  // LockTokens lock tokens
  rpc LockTokens(MsgLockTokens) returns (MsgLockTokensResponse);
  // BeginUnlockingAll begin unlocking all tokens
  rpc BeginUnlockingAll(MsgBeginUnlockingAll)
      returns (MsgBeginUnlockingAllResponse);
  // MsgBeginUnlocking begins unlocking tokens by lock ID
  rpc BeginUnlocking(MsgBeginUnlocking) returns (MsgBeginUnlockingResponse);
  // MsgEditLockup edits the existing lockups by lock ID
  // rpc ExtendLockup(MsgExtendLockup) returns (MsgExtendLockupResponse);
}

// MsgCreateGauge creates a gague to distribute rewards to users
message MsgCreateGauge {
  // is_perpetual shows if it's a perpetual or non-perpetual gauge
  // Non-perpetual gauges distribute their tokens equally per epoch while the
  // gauge is in the active period. Perpetual gauges distribute all their tokens
  // at a single time and only distribute their tokens again once the gauge is
  // refilled
  bool is_perpetual = 1;
  // owner is the address of gauge creator
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  // distribute_to show which lock the gauge should distribute to by time
  // duration or by timestamp
  QueryCondition distribute_to = 3
      [ (gogoproto.nullable) = false ];
  // coins are coin(s) to be distributed by the gauge
  repeated cosmos.base.v1beta1.Coin coins = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // start_time is the distribution start time
  google.protobuf.Timestamp start_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];
  // num_epochs_paid_over is the number of epochs distribution will be completed
  // over
  uint64 num_epochs_paid_over = 6;

  // pricing_tick is the price that liquidity within the gauge range will be priced at
  int64 pricing_tick = 7;
}
message MsgCreateGaugeResponse {}

// MsgAddToGauge adds coins to a previously created gauge
message MsgAddToGauge {
  // owner is the gauge owner's address
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  // gauge_id is the ID of gauge that rewards are getting added to
  uint64 gauge_id = 2;
  // rewards are the coin(s) to add to gauge
  repeated cosmos.base.v1beta1.Coin rewards = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
message MsgAddToGaugeResponse {}

message MsgLockTokens {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  repeated cosmos.base.v1beta1.Coin coins = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
message MsgLockTokensResponse { uint64 ID = 1; }

message MsgBeginUnlockingAll {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}
message MsgBeginUnlockingAllResponse { repeated Lock unlocks = 1; }

message MsgBeginUnlocking {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 ID = 2;
  // Amount of unlocking coins. Unlock all if not set.
  repeated cosmos.base.v1beta1.Coin coins = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
message MsgBeginUnlockingResponse {
  bool success = 1;
  uint64 unlockingLockID = 2;
}

// // MsgExtendLockup extends the existing lockup's duration.
// // The new duration is longer than the original.
// message MsgExtendLockup {
//   string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
//   uint64 ID = 2;

//   // duration to be set. fails if lower than the current duration, or is
//   // unlocking
//   google.protobuf.Duration duration = 3 [
//     (gogoproto.nullable) = false,
//     (gogoproto.stdduration) = true,
//     (gogoproto.jsontag) = "duration,omitempty",
//     (gogoproto.moretags) = "yaml:\"duration\""
//   ];

//   // extend for other edit, e.g. cancel unlocking
// }

// message MsgExtendLockupResponse { bool success = 1; }
